tests/ui/parser/keyword-const-as-identifier.stderr
error: expected `{`, found `=`
  --> $DIR/keyword-const-as-identifier.rs:2:15
   |
LL |     let const = "foo";
   |               ^ expected `{`

error[E0658]: inline-const in pattern position is experimental
  --> $DIR/keyword-const-as-identifier.rs:2:9
   |
LL |     let const = "foo";
   |         ^^^^^
   |
   = note: see issue #76001 <https://github.com/rust-lang/rust/issues/76001> for more information
   = help: add `#![feature(inline_const_pat)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
